--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,4 +49,38 @@ li a {
     text-decoration: underline;
 }
 
+#Fit1 {
+/*    float: left;*/
+    width: 30%;
+    margin: 0px 25px;
+}
+#Fit2 {
+/*    float: right;*/
+    width: 30%;
+    margin: 0px 25px;
+}
+#Fit3 {
+    float: left;
+    width: 25%;
+    margin: 5px;
+}
+#Fit4 {
+    margin: 25px 36%;
+}
+#Fit5 {
+    float: right;
+    width: 25%;
+    margin: 5px;
+}
+p {
+    font-size: 20px;
+    padding: 5px;
+    text-align: center;
+}
+
+@media only screen and (max-width: 700px) {
+  #Fit4 {
+      margin: 25px 15%;
+  }
+}
 
