--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url(./Media/IMG/floral-1382723_1280.jpg);
+    background-image: url(./Media/IMG/47949.jpg);
     color: white;
 }
 
